// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StockInfo /> should render with the visible inventory and with the store name 1`] = `
<StockInfo
  className={null}
  location={
    Object {
      "name": "Test Store",
    }
  }
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": null,
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-1604zsc css-nil"
      >
        <StockInfoInventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;

exports[`<StockInfo /> should render without store name 1`] = `
<StockInfo
  className={null}
  location={
    Object {
      "name": "Test Store",
    }
  }
  showStoreName={false}
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": null,
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-1604zsc css-nil"
      >
        <StockInfoInventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;

exports[`<StockInfo /> should render without the visible inventory 1`] = `
<StockInfo
  className={null}
  location={
    Object {
      "name": "Test Store",
    }
  }
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": null,
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-1604zsc css-nil"
      >
        <StockInfoInventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": null,
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;
